<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintTop_toTopOf="@+id/topLimit">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/popular_page_title"
            android:textColor="@color/film_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/findDescription"
            android:src="@drawable/search" />

    </LinearLayout>

    <ImageView
        android:id="@+id/noConnectionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/noConnection"
        android:src="@drawable/no_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/noConnectionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/noConnectionText"
        android:textAlignment="center"
        android:textColor="@color/light_blue_teal"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/noConnectionIcon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/inactive_button_background"
        android:stateListAnimator="@null"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/light_blue_white"
        android:textSize="18sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noConnectionText" />


</androidx.constraintlayout.widget.ConstraintLayout>